--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 </head>
 
 <body>
+  <h2>Let's find your perfect stylist</h2>
+    <p>We’ve endured soul-crushing, hair-breaking, money-wasting trial-and-error, and put up with bad service, long waits, and rude stylists…all in the name of beauty. We couldn't find a solution, so we created one. e-salon provides a platform where you can enjoy peace of mind in knowing that you will receive high-quality salon services and professional stylists who can understand just what you need. e-salon members have met these standards, and will provide you with the very best in hairdressing.</p>
 
+    
   
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <!-- Bootstrap tooltips -->
