--- a/index.html
+++ b/index.html
@@ -16,7 +16,30 @@
   <h2>Let's find your perfect stylist</h2>
     <p>We’ve endured soul-crushing, hair-breaking, money-wasting trial-and-error, and put up with bad service, long waits, and rude stylists…all in the name of beauty. We couldn't find a solution, so we created one. e-salon provides a platform where you can enjoy peace of mind in knowing that you will receive high-quality salon services and professional stylists who can understand just what you need. e-salon members have met these standards, and will provide you with the very best in hairdressing.</p>
 
-    
+    <!--Carousel Wrapper-->
+<div id="carousel-example-1z" class="carousel slide carousel-fade" data-ride="carousel">
+  <!--Indicators-->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-1z" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-1z" data-slide-to="1"></li>
+    <li data-target="#carousel-example-1z" data-slide-to="2"></li>
+  </ol>
+  <!--/.Indicators-->
+  <!--Slides-->
+  
+  <!--Controls-->
+  <a class="carousel-control-prev" href="#carousel-example-1z" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carousel-example-1z" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  <!--/.Controls-->
+</div>
+<!--/.Carousel Wrapper-->
+
   
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <!-- Bootstrap tooltips -->
