Add information about the profiles of the salonists and the forms to be used by the user

--- a/index.html
+++ b/index.html
@@ -13,8 +13,158 @@
 </head>
 
 <body>
+  <div class="container">
+    <h1>PROFILES</h1>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="" alt="Salonist Image" id="img4">
+        <p>Name:Rosette Mwamba</p>
+        <p>Rating:<span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span></p>
+        <div id="detail4">
+          <h4>QUALIFICATIONS</h4>
+          <ul>
+            <li>Graduated from Ashley's beauty College.</li>
+            <li>An experience of five years in hair styling.</li>
+            <li>She was the student of the year in 2013 due to her hard and talented work.</li>
+          </ul>
+          <h4>HAIR STYLES</h4>
+          <ul>
+            <li>Box-Braids</li>
+            <li>Happily Married Style</li>
+            <li>Feed-in Braids</li>
+            <li>Mohawk</li>
+            <li>Faux locs</li>
+          </ul>
+          <h4>CONTACT</h4>
+          <p>Tel:0722567798 <br>
+            Email:mogusu@gmail.com<br>
+            Location:Situated along Tom Mboya opposite National Archives</p>
+          <h5>Cost For Service</h5>
+          <p>It costs Ksh.1500 to access services from Rosette</p>
+          <button class="btn btn-info">Get this salonist?</button>
+          <input type="radio" name="salonist" value="yes" id="radio4">Yes
+          <input type="radio" name="salonist" value="no" id="radio41">No
+          <form id="myForm4" class="btn-success">
+            <input type="text" placeholder="Location" required>
+            <input type="text" placeholder="Contact" required><br>
+            <select id="valueSelect3" class="" required>
+              <option value="" disabled selected>--Choose hairstlye--</option>
+              <option value="1000">Box-Braids</option>
+              <option value="800">Happily Married Style</option>
+              <option value="1500">Feed-in Braids</option>
+              <option value="500">Mohawk</option>
+              <option value="1500">Faux locs</option>
+            </select>
+            <input type="submit" class="btn-success" value="submit">
+          </form>
+        </div>
+        <br><br>
+        <p id="mwamcost"></p>
+      </div>
+      <div class="col-md-4">
+        <img src="" alt="Salonist Image" id="img5">
+        <p>Name:Samson Kabwelu</p>
+        <p>Rating:<span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span></p>
+        <div id="detail5">
+          <h4>QUALIFICATIONS</h4>
+          <ul>
+            <li>Graduated from Beauty Point School Of Hair & Beauty College.</li>
+            <li>He has an experience of two years in hair styling.</li>
+          </ul>
+          <h4>HAIR STYLES</h4>
+          <ul>
+            <li>Box-Braids</li>
+            <li>Happily Married Style</li>
+            <li>Feed-in Braids</li>
+            <li>Mohawk</li>
+            <li>Faux locs</li>
+          </ul>
+          <h4>CONTACT</h4>
+          <p>Tel:0721589798 <br>
+            Email:Sammy@gmail.com<br>
+            Location:Situated along Kenyatta Avenue</p>
+          <h5>Cost For Service</h5>
+          <p>It costs Ksh.1000 to access services from Sammy</p>
+          <button class="btn btn-info">Get this salonist?</button>
+          <input type="radio" name="salonist" value="yes" id="radio5">Yes
+          <input type="radio" name="salonist" value="no" id="radio51">No
+          <form id="myForm5" class="btn-success">
+            <input type="text" placeholder="Location" required>
+            <input type="text" placeholder="Contact" required><br>
+            <select id="valueSelect4" class="" required>
+              <option value="" disabled selected>--Choose hairstlye--</option>
+              <option value="1000">Box-Braids</option>
+              <option value="800">Happily Married Style</option>
+              <option value="1500">Feed-in Braids</option>
+              <option value="500">Mohawk</option>
+              <option value="1500">Faux locs</option>
+            </select>
+            <input type="submit" class="btn-success" value="submit">
+          </form>
+        </div>
+        <br><br>
+        <p id="kabcost"></p>
+      </div>
+      <div class="col-md-4">
+        <img src="" alt="Salonist Image" id="img6">
+        <p>Name:Shantel Mweheni</p>
+        <p>Rating:<span class="fa fa-star checked"></span>
+          <span class="fa fa-star checked"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span>
+          <span class="fa fa-star"></span></p>
+        <div id="detail6">
+          <h4>QUALIFICATIONS</h4>
+          <ul>
+            <li>Graduated from Pink Lady Salon And Training School.</li>
+            <li>She has an experience of three years in hair styling.</li>
+            <li>She won an award of the best hair stylist in the Mzomo Beauty Competitions in 2018.</li>
+          </ul>
+          <h4>HAIR STYLES</h4>
+          <ul>
+            <li>Box-Braids</li>
+            <li>Happily Married Style</li>
+            <li>Feed-in Braids</li>
+            <li>Mohawk</li>
+            <li>Faux locs</li>
+          </ul>
+          <h4>CONTACT</h4>
+          <p>Tel:0721589798 <br>
+            Email:mweheni@gmail.com<br>
+            Location:Situated along Moi Avenue</p>
+          <h5>Cost For Service</h5>
+          <p>It costs Ksh.900 to access services from Mweheni</p>
+          <button class="btn btn-info">Get this salonist?</button>
+          <input type="radio" name="salonist" value="yes" id="radio6">Yes
+          <input type="radio" name="salonist" value="no" id="radio61">No
+          <form id="myForm6" class="btn-success">
+            <input type="text" placeholder="Location" required>
+            <input type="text" placeholder="Contact" required><br>
+            <select id="valueSelect4" class="" required>
+              <option value="" disabled selected>--Choose hairstlye--</option>
+              <option value="1000">Box-Braids</option>
+              <option value="800">Happily Married Style</option>
+              <option value="1500">Feed-in Braids</option>
+              <option value="500">Mohawk</option>
+              <option value="1500">Faux locs</option>
+            </select>
+            <input type="submit" class="btn-success" value="submit">
+          </form>
+        </div>
+        <br><br>
+        <p id=mwecost></p>
+      </div>
+    </div>
+  </div>
 
-  
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <!-- Bootstrap tooltips -->
   <script type="text/javascript" src="js/popper.min.js"></script>
