This commit add strong tag to the appended message

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
           </form>
         </div>
         <br><br>
-        <p id="janeCost">
+        <strong><p id="janeCost">
 
-        </p>
+        </p></strong>
       </div>
       <div class="col-md-4">
         <img src="" alt="Salonist Image" id="img2">
@@ -161,9 +161,9 @@
           </form>
         </div>
         <br><br>
-        <p id="happinessCost">
+        <strong><p id="happinessCost">
 
-        </p>
+        </p></strong>
       </div>
       <div class="col-md-4">
         <img src="" alt="Salonist Image" id="img3">
@@ -211,9 +211,9 @@
           </form>
         </div>
         <br><br>
-        <p id="paulCost">
+        <strong><p id="paulCost">
 
-        </p>
+        </p></strong>
       </div>
     </div>
   </div>
