--- a/index.html
+++ b/index.html
@@ -14,7 +14,165 @@
 
 <body>
 
-  
+  <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
+
+      <!--Controls-->
+      <div class="controls-top">
+        <a class="btn-floating" href="#multi-item-example" data-slide="prev"><i class="fas fa-chevron-left"></i></a>
+        <a class="btn-floating" href="#multi-item-example" data-slide="next"><i
+            class="fas fa-chevron-right"></i></a>
+      </div>
+      <!--/.Controls-->
+
+      <!--Indicators-->
+      <ol class="carousel-indicators">
+        <li data-target="#multi-item-example" data-slide-to="0" class="active"></li>
+        <li data-target="#multi-item-example" data-slide-to="1"></li>
+        <li data-target="#multi-item-example" data-slide-to="2"></li>
+      </ol>
+      <!--/.Indicators-->
+
+      <!--Slides-->
+      <div class="carousel-inner" role="listbox">
+
+        <!--First slide-->
+        <div class="carousel-item active">
+            <div class ="row">
+          <div class="col-md-4">
+            <div class="card mb-2">
+              <img class="card-img-top"
+                src="img/Faux.jpg"
+                alt="Card image cap" height="400px;">
+              <div class="card-body">
+                <h4 class="card-title">Faux-Locks</h4>
+                <p class="card-text">Best ways to pull off the hairstyle.</p>
+                <a class="btn btn-primary">Button</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-2">
+              <img class="card-img-top"
+                src="img/happy.jpg"
+                alt="Card image cap" height="400px;">
+              <div class="card-body">
+                <h4 class="card-title">Happily-Married</h4>
+                <p class="card-text">Cornrows come in all styles and colors.</p>
+                <a class="btn btn-primary">Button</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-2">
+              <img class="card-img-top"
+                src="img/feed.jpg"
+                alt="Card image cap" height="400px;">
+              <div class="card-body">
+                <h4 class="card-title">Feed-in-Braids</h4>
+                <p class="card-text">Mix of small and big braids feeding into each other.</p>
+                <a class="btn btn-primary">Button</a>
+              </div>
+            </div>
+          </div>
+  </div>
+        </div>
+        <!--/.First slide-->
+
+        <!--Second slide-->
+        <!-- <div class="carousel-item">
+           <div class="row">
+          <div class="col-md-4">
+            <div class="card mb-2">
+              <img class="card-img-top"
+                src="img/box.jpg" alt="Card image cap">
+              <div class="card-body" height ="400px;">
+                <h4 class="card-title">Box-Braids</h4>
+                <p class="card-text">Triangle convectional square parted box braids.</p>
+                <a class="btn btn-primary">Button</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-2">
+              <img class="card-img-top"
+                src="img/box1.jpg" alt="Card image cap" height=400px;>
+              <div class="card-body">
+                <h4 class="card-title">Box-Braids</h4>
+                <p class="card-title">Side-parting from either side of the head.</p>
+                <a class="btn btn-primary">Button</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-2">
+              <img class="card-img-top"
+                src="img/box4.jpg" alt="Card image cap" height="400px;">
+              <div class="card-body">
+                <h4 class="card-title">Box-Braids</h4>
+                <p class="card-text">Big box braids protect hair breakage especially on edges.</p>
+                <a class="btn btn-primary">Button</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        </div>
+        <!--/.Second slide-->
+
+        <!--Third slide-->
+        <div class="carousel-item">
+          <div class="row">
+          <div class="col-md-4">
+            <div class="card mb-2">
+              <img class="card-img-top"
+                src="img/mohawk2.jpg" alt="Card image cap" height="400px;">
+              <div class="card-body">
+                <h4 class="card-title">Mohawk</h4>
+                <p class="card-text">Have the sides of your hair cornrowed..</p>
+                <a class="btn btn-primary">Button</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card mb-2">
+              <img class="card-img-top"
+                src="img/mohawk1.jpg" alt="Card image cap" height ="400px;">
+              <div class="card-body">
+                <h4 class="card-title">Mohawk</h4>
+                <p class="card-text">Shed the monotony with your box braids.</p>
+                <!-- <a class="btn btn-primary">Button</a> --> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card mb-2">
+              <img class="card-img-top"
+                src="img/mohawk.jpg" alt="Card image cap" height= "400px;">
+              <div class="card-body">
+                <h4 class="card-title">Mohawk</h4>
+                <p class="card-text">Trendy way to wear braids with shaved sides.</p>
+                <!-- <a class="btn btn-primary">Button</a> -->
+              </div>
+            </div>
+          </div>
+       </div>
+        </div>
+        <!--/.Third slide-->
+
+      </div>
+      <!--/.Slides-->
+
+    </div>
+    <!--/.Carousel Wrapper-->
+
+
+
+
   <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
   <!-- Bootstrap tooltips -->
   <script type="text/javascript" src="js/popper.min.js"></script>
