--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
           </div>
 
-          <div class="col-md-4">
+          <!-- <div class="col-md-4">
             <div class="card mb-2">
               <img class="card-img-top"
                 src="img/feed.jpg"
@@ -76,12 +76,12 @@
               </div>
             </div>
           </div>
-  </div>
+  </div> -->
         </div>
         <!--/.First slide-->
 
         <!--Second slide-->
-        <!-- <div class="carousel-item">
+        <div class="carousel-item">
            <div class="row">
           <div class="col-md-4">
             <div class="card mb-2">
@@ -144,7 +144,7 @@
               <div class="card-body">
                 <h4 class="card-title">Mohawk</h4>
                 <p class="card-text">Shed the monotony with your box braids.</p>
-                <!-- <a class="btn btn-primary">Button</a> --> -->
+                <!-- <a class="btn btn-primary">Button</a> -->
               </div>
             </div>
           </div>
