Update my other images

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
               <div class="card-body">
                 <h4 class="card-title">Happily-Married</h4>
                 <p class="card-text">Cornrows come in all styles and colors.</p>
-                <a class="btn btn-primary">Button</a>
+                <!-- <a class="btn btn-primary">Button</a> -->
               </div>
             </div>
           </div>
 
-          <!-- <div class="col-md-4">
+          <div class="col-md-4">
             <div class="card mb-2">
               <img class="card-img-top"
                 src="img/feed.jpg"
@@ -72,11 +72,11 @@
               <div class="card-body">
                 <h4 class="card-title">Feed-in-Braids</h4>
                 <p class="card-text">Mix of small and big braids feeding into each other.</p>
-                <a class="btn btn-primary">Button</a>
+                <!-- <a class="btn btn-primary">Button</a> -->
               </div>
             </div>
           </div>
-  </div> -->
+  </div>
         </div>
         <!--/.First slide-->
 
