This commit removes the btn-success from forms

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <input type="radio" id="yesRadio1" name="salonist" value="yes">Yes
           <input type="radio" id="noRadio1" name="salonist" value="0">No
 
-          <form id="myForm1" class="btn-success">
+          <form id="myForm1">
             <input type="text" placeholder="Location" required>
             <input type="text" placeholder="Contact" class="center" required>
             <select id="valueSelect" class="" required>
