Style my other image

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <div class="card-body">
                 <h4 class="card-title">Faux-Locks</h4>
                 <p class="card-text">Best ways to pull off the hairstyle.</p>
-                <a class="btn btn-primary">Button</a>
+                <!-- <a class="btn btn-primary">Button</a> -->
               </div>
             </div>
           </div>
@@ -90,7 +90,7 @@
               <div class="card-body" height ="400px;">
                 <h4 class="card-title">Box-Braids</h4>
                 <p class="card-text">Triangle convectional square parted box braids.</p>
-                <a class="btn btn-primary">Button</a>
+                <!-- <a class="btn btn-primary">Button</a> -->
               </div>
             </div>
           </div>
@@ -102,7 +102,7 @@
               <div class="card-body">
                 <h4 class="card-title">Box-Braids</h4>
                 <p class="card-title">Side-parting from either side of the head.</p>
-                <a class="btn btn-primary">Button</a>
+                <!-- <a class="btn btn-primary">Button</a> -->
               </div>
             </div>
           </div>
@@ -114,7 +114,7 @@
               <div class="card-body">
                 <h4 class="card-title">Box-Braids</h4>
                 <p class="card-text">Big box braids protect hair breakage especially on edges.</p>
-                <a class="btn btn-primary">Button</a>
+                <!-- <a class="btn btn-primary">Button</a> -->
               </div>
             </div>
           </div>
@@ -133,7 +133,7 @@
               <div class="card-body">
                 <h4 class="card-title">Mohawk</h4>
                 <p class="card-text">Have the sides of your hair cornrowed..</p>
-                <a class="btn btn-primary">Button</a>
+                <!-- <a class="btn btn-primary">Button</a> -->
               </div>
             </div>
           </div>
