Add font stylying to make it nice

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/mdb.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Aclonica|Merienda&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -71,7 +72,7 @@
                 alt="Card image cap" height="400px;">
               <div class="card-body">
                 <h4 class="card-title">Feed-in-Braids</h4>
-                <p class="card-text">Mix of small and big braids feeding into each other.</p>
+                <p class="card-text">Mix small and big  feeding into each other.</p>
                 <!-- <a class="btn btn-primary">Button</a> -->
               </div>
             </div>
