--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 src="img/box.jpg" alt="Card image cap">
               <div class="card-body" height ="400px;">
                 <h4 class="card-title">Box-Braids</h4>
-                <p class="card-text">Triangle convectional square parted box braids.</p>
+                <p class="card-text">Triangle convectional  parted box braids.</p>
                 <!-- <a class="btn btn-primary">Button</a> -->
               </div>
             </div>
@@ -102,7 +102,7 @@
                 src="img/box1.jpg" alt="Card image cap" height=400px;>
               <div class="card-body">
                 <h4 class="card-title">Box-Braids</h4>
-                <p class="card-title">Side-parting from either side of the head.</p>
+                <p class="card-text">Side parting braids from either side of the head.</p>
                 <!-- <a class="btn btn-primary">Button</a> -->
               </div>
             </div>
