This commit will fix errors in the files

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <button class="btn btn-info">Get this salonist?</button>
           <input type="radio" name="salonist" value="yes" id="radio4">Yes
           <input type="radio" name="salonist" value="no" id="radio41">No
-          <form id="myForm4" class="btn-success">
+          <form id="myForm4">
             <input type="text" placeholder="Location" required>
             <input type="text" placeholder="Contact" required><br>
             <select id="valueSelect3" class="" required>
@@ -63,7 +63,7 @@
           </form>
         </div>
         <br><br>
-        <p id="mwamcost"></p>
+         <strong><p id="mwamcost"></p></strong>
       </div>
       <div class="col-md-4">
         <img src="" alt="Salonist Image" id="img5">
@@ -96,7 +96,7 @@
           <button class="btn btn-info">Get this salonist?</button>
           <input type="radio" name="salonist" value="yes" id="radio5">Yes
           <input type="radio" name="salonist" value="no" id="radio51">No
-          <form id="myForm5" class="btn-success">
+          <form id="myForm5">
             <input type="text" placeholder="Location" required>
             <input type="text" placeholder="Contact" required><br>
             <select id="valueSelect4" class="" required>
@@ -111,7 +111,7 @@
           </form>
         </div>
         <br><br>
-        <p id="kabcost"></p>
+        <strong><p id="kabcost"></p></strong>
       </div>
       <div class="col-md-4">
         <img src="" alt="Salonist Image" id="img6">
@@ -145,7 +145,7 @@
           <button class="btn btn-info">Get this salonist?</button>
           <input type="radio" name="salonist" value="yes" id="radio6">Yes
           <input type="radio" name="salonist" value="no" id="radio61">No
-          <form id="myForm6" class="btn-success">
+          <form id="myForm6">
             <input type="text" placeholder="Location" required>
             <input type="text" placeholder="Contact" required><br>
             <select id="valueSelect4" class="" required>
@@ -160,7 +160,7 @@
           </form>
         </div>
         <br><br>
-        <p id=mwecost></p>
+        <strong><p id=mwecost></p></strong>
       </div>
     </div>
   </div>
