This commit removes btn success in form1 and form2

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
           <input type="radio" id="yesRadio2" name="salonist" value="yes">Yes
           <input type="radio" id="noRadio2" name="salonist" value="0">No
-          <form id="myForm2" class="btn-success">
+          <form id="myForm2">
             <input type="text" placeholder="Location" required>
             <input type="text" placeholder="Contact" required>
             <select id="valueSelect1" required>
@@ -196,7 +196,7 @@
           <button class="btn btn-info" id="button3">Get this salonist?</button>
           <input type="radio" id="yesRadio3" name="salonist" value="yes">Yes
           <input type="radio" id="noRadio3" name="salonist" value="0">No
-          <form id="myForm3" class="btn-success">
+          <form id="myForm3">
             <input type="text" placeholder="Location">
             <input type="text" placeholder="Contact">
             <select id="valueSelect2" required>
