--- a/index.html
+++ b/index.html
@@ -382,13 +382,13 @@
     </div>
   </div>
     <!--/.Carousel Wrapper-->
-   <!-- <div class ="profiles">
+   <div class ="profiles">
       <img src="img/worker1.jpg" class="profile" alt="worker" height="100px;" width="100px;">
       <img src="img/worker2.jpg"  class="profile" alt="worker" height="100px;" width="100px;">
       <img src="img/worker3.jpg" class="profile" alt="worker" height="100px;" width="100px;">
       <img src="img/worker4.jpg" class="profile" alt="worker" height="100px;" width="100px;">
       <img src="img/worker5.jpg" class="profile" alt="worker" height="100px;" width="100px;">
-    </div>-->
+    </div>
 
     <div id = "stylists">
       <div class="container">
