--- a/index.html
+++ b/index.html
@@ -382,13 +382,6 @@
     </div>
   </div>
     <!--/.Carousel Wrapper-->
-   <div class ="profiles">
-      <img src="img/worker1.jpg" class="profile" alt="worker" height="100px;" width="100px;">
-      <img src="img/worker2.jpg"  class="profile" alt="worker" height="100px;" width="100px;">
-      <img src="img/worker3.jpg" class="profile" alt="worker" height="100px;" width="100px;">
-      <img src="img/worker4.jpg" class="profile" alt="worker" height="100px;" width="100px;">
-      <img src="img/worker5.jpg" class="profile" alt="worker" height="100px;" width="100px;">
-    </div>
 
     <div id = "stylists">
       <div class="container">
@@ -396,7 +389,7 @@
       
         <div class="row">
           <div class="col-md-4">
-            <img src="img/worker1.jpg" class="profile" alt="Salonist Image" id="img1">
+            <img src="img/worker1.jpg" class="profile" alt="Salonist Image" id="img1" height="100px;" width="100px;">
             <p>Name: Jane Oburu</p>
             <p>Rating: <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -451,7 +444,7 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="img/worker2.jpg" class="profile" alt="Salonist Image" id="img4">
+            <img src="img/worker2.jpg" class="profile" alt="Salonist Image" id="img4" height="100px;" width="100px;">
             <p>Name:Rosette Mwamba</p>
             <p>Rating:<span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -502,7 +495,7 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="img/worker3.jpg" class="profile" alt="Salonist Image" id="img6">
+            <img src="img/worker3.jpg" class="profile" alt="Salonist Image" id="img6" height="100px;" width="100px;">
             <p>Name:Shantel Mweheni</p>
             <p>Rating:<span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -553,7 +546,7 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="img/worker4.jpg" class="profile" alt="Salonist Image" id="img5">
+            <img src="img/worker4.jpg" class="profile" alt="Salonist Image" id="img5" height="100px;" width="100px;">
             <p>Name:Samson Kabwelu</p>
             <p>Rating:<span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -604,7 +597,7 @@
           </div>
 
           <div class="col-md-4">
-            <img src="img/worker5.jpg" class="profile" alt="Salonist Image" id="img2">
+            <img src="img/worker5.jpg" class="profile" alt="Salonist Image" id="img2" height="100px;" width="100px;">
             <p>Name: Happiness Mwikali</p>
             <p>Rating: <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -657,7 +650,7 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="" alt="Salonist Image" class="profile" id="img3">
+            <img src="" alt="Salonist Image" class="profile" id="img3" height="100px;" width="100px;">
             <p>Name: Paul Johns</p>
             <p>Rating: <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
