--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
       
         <div class="row">
           <div class="col-md-4">
-            <img src="img/worker1.jpg" class="profile" alt="Salonist Image" id="img1" height="150px;" width="150px;">
+            <img src="img/worker1.jpg" class="profile" alt="Salonist Image" id="img1" height="200px" width="200px">
             <p>Name: Jane Oburu</p>
             <p>Rating: <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -444,7 +444,7 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="img/worker2.jpg" class="profile" alt="Salonist Image" id="img4" height="150px;" width="150px;">
+            <img src="img/worker2.jpg" class="profile" alt="Salonist Image" id="img4" height="200px" width="200px">
             <p>Name:Rosette Mwamba</p>
             <p>Rating:<span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -495,7 +495,7 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="img/worker3.jpg" class="profile" alt="Salonist Image" id="img6" height="150px;" width="150px;">
+            <img src="img/worker3.jpg" class="profile" alt="Salonist Image" id="img6" height="200px;" width="200px;">
             <p>Name:Shantel Mweheni</p>
             <p>Rating:<span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -546,7 +546,7 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="img/worker4.jpg" class="profile" alt="Salonist Image" id="img5" height="150px;" width="150px;">
+            <img src="img/worker4.jpg" class="profile" alt="Salonist Image" id="img5" height="200px" width="200px">
             <p>Name:Samson Kabwelu</p>
             <p>Rating:<span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -597,7 +597,7 @@
           </div>
 
           <div class="col-md-4">
-            <img src="img/worker5.jpg" class="profile" alt="Salonist Image" id="img2" height="150px;" width="150px;">
+            <img src="img/worker5.jpg" class="profile" alt="Salonist Image" id="img2" height="200px" width="200px">
             <p>Name: Happiness Mwikali</p>
             <p>Rating: <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -650,7 +650,7 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="" alt="Salonist Image" class="profile" id="img3" height="150px;" width="150px;">
+            <img src="" alt="Salonist Image" class="profile" id="img3" height="200px" width="200px;">
             <p>Name: Paul Johns</p>
             <p>Rating: <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
