--- a/index.html
+++ b/index.html
@@ -389,7 +389,9 @@
       
         <div class="row">
           <div class="col-md-4">
-            <img src="img/worker1.jpg" class="profile" alt="Salonist Image" id="img1" height="100px" width="200px">
+            <divclass="profiles">
+            <img src="img/worker1.jpg" class="profile" alt="Salonist Image" id="img1" height="100px" width="100px">
+              </div>
             <p>Name: Jane Oburu</p>
             <p>Rating: <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -444,7 +446,9 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="img/worker2.jpg" class="profile" alt="Salonist Image" id="img4" height="100px" width="200px">
+            <div class="profiles">
+            <img src="img/worker2.jpg" class="profile" alt="Salonist Image" id="img4" height="100px" width="100px">
+              </div>
             <p>Name:Rosette Mwamba</p>
             <p>Rating:<span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -495,7 +499,9 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="img/worker3.jpg" class="profile" alt="Salonist Image" id="img6" height="100px" width="200px">
+            <div class=""profiles>
+            <img src="img/worker3.jpg" class="profile" alt="Salonist Image" id="img6" height="100px" width="100px">
+            </div>
             <p>Name:Shantel Mweheni</p>
             <p>Rating:<span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -546,7 +552,10 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="img/worker4.jpg" class="profile" alt="Salonist Image" id="img5" height="100px" width="200px">
+            <div class="profiles">
+            
+            <img src="img/worker4.jpg" class="profile" alt="Salonist Image" id="img5" height="100px" width="100px">
+              </div>
             <p>Name:Samson Kabwelu</p>
             <p>Rating:<span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -597,7 +606,9 @@
           </div>
 
           <div class="col-md-4">
-            <img src="img/worker5.jpg" class="profile" alt="Salonist Image" id="img2" height="100px" width="200px">
+            <div class ="profiles">
+            <img src="img/worker5.jpg" class="profile" alt="Salonist Image" id="img2" height="100px" width="100px">
+              </div>
             <p>Name: Happiness Mwikali</p>
             <p>Rating: <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
@@ -650,7 +661,9 @@
             </strong>
           </div>
           <div class="col-md-4">
-            <img src="img/worker5.jpg" alt="Salonist Image" class="profile" id="img3" height="100px" width="200px;">
+            <div class="profiles">
+            <img src="img/worker5.jpg" alt="Salonist Image" class="profile" id="img3" height="100px" width="100px">
+              </div>
             <p>Name: Paul Johns</p>
             <p>Rating: <span class="fa fa-star checked"></span>
               <span class="fa fa-star checked"></span>
